# datascipsych_finalproject

./: LICENSE  README.md  pyproject.toml
jupyter/: replication.ipynb  table_1.csv
src/project/: task.py
src/project/data/: data_expt1.csv
