[project]
name = "final_project"
version = "0.1.0"
author = "Linzan Liu"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "polars",
    "pyarrow",
    "seaborn",
    "pingouin",
    "jupyterlab",
    "jupyterlab_rise"
]


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"